k8s/apps/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: mohamedtolbapfs/test_kube:v20250521-6a4bc41
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
             requests:
               memory: "512Mi"
               cpu: "400m"
             limits:
               memory: "1Gi"
               cpu: "800m"
      volumes:
        - name: certs
          secret:
            secretName: hello-world-tls
        - name: hello-world-logs
          persistentVolumeClaim:
            claimName: hello-world-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hello-world
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: hello-world
