k8s/apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - helloworld.fashionxlab.com
      secretName: hello-tls
  rules:
    - host: pfs-builder1.fashionxlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfs-app-service
                port:
                  number: 80
